apps/kyverno/policies/disallow-loadbalancer.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-loadbalancer-service
  annotations:
    policies.kyverno.io/title: Disallow Service Type LoadBalancer in CEL expressions
    policies.kyverno.io/category: Sample in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Service
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      LoadBalancer services are not needed in this local cluster. All external
      traffic is routed through Traefik via Ingress resources.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: no-LoadBalancer
      match:
        any:
        - resources:
            kinds:
            - Service
            operations:
            - CREATE
            - UPDATE
      validate:
        cel:
          expressions:
          - expression: "object.spec.type != 'LoadBalancer'"
            message: "Service of type LoadBalancer is not allowed."
