apps/kyverno/policies/restrict-ingress-classes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-ingress-classes
  annotations:
    policies.kyverno.io/title: Restrict Ingress Classes
    policies.kyverno.io/category: Sample in CEL
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      Only Ingress resources using the `traefik` ingressClassName are allowed.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-ingress
      match:
        any:
        - resources:
            kinds:
            - Ingress
            operations:
            - CREATE
            - UPDATE
      validate:
        cel:
          expressions:
          - expression: >-
              object.spec.?ingressClassName.orValue('') in ['traefik']
            message: "Unknown ingress class. Only traefik is allowed."
